Twenty Thirteen: fix text overflow with sidebar in IE8, props obenland. Fixes #23579.
git-svn-id: http://core.svn.wordpress.org/trunk@23610 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/css/ie.css
+++ b/wp-content/themes/twentythirteen/css/ie.css
@@ -138,6 +138,9 @@ img.alignleft {
 	content: none;
 }
 
+.ie8 .site-main .widget-area {
+	margin-right: 0;
+}
 
 /* Internet Explorer 7 */
 .ie7 .assistive-text,
